# safety-mitts

./: .gitignore  Cargo.toml  README.md
config/: config.yaml  default-policy.yaml
crates/audit-log/: Cargo.toml
crates/audit-log/src/: entry.rs  lib.rs  sink.rs  writer.rs
crates/net-guard/: Cargo.toml
crates/net-guard/src/: guard.rs  lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: decision.rs  evaluator.rs  lib.rs  loader.rs  matcher.rs  schema.rs
crates/prompt-sanitizer/: Cargo.toml
crates/prompt-sanitizer/src/: lib.rs  patterns.rs  sanitizer.rs  scanner.rs
crates/safety-mitts/: Cargo.toml
crates/safety-mitts/src/: cli.rs  config.rs  main.rs  supervisor.rs
crates/ws-proxy/: Cargo.toml
crates/ws-proxy/src/: lib.rs  listener.rs  origin.rs  relay.rs
tests/: mock_openclaw.py  run_tests.sh  test_client.py
