[workspace]
resolver = "2"
members = [
    "crates/safety-mitts",
    "crates/ws-proxy",
    "crates/policy-engine",
    "crates/audit-log",
    "crates/net-guard",
    "crates/prompt-sanitizer",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
