[package]
name = "safety-mitts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safety-mitts"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
audit-log = { path = "../audit-log" }
net-guard = { path = "../net-guard" }
policy-engine = { path = "../policy-engine" }
prompt-sanitizer = { path = "../prompt-sanitizer" }
ws-proxy = { path = "../ws-proxy" }
